--- a/NekretnineFrontend/src/app/app.component.css
+++ b/NekretnineFrontend/src/app/app.component.css
@@ -6,6 +6,7 @@ mat-toolbar {
 mat-sidenav {
   margin: 16px;
   width: 200px;
+  height: 100%;
   border-right: none;
   background: #002b5c;
   color: white;
@@ -19,10 +20,8 @@ mat-sidenav {
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
+  padding-top:30px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   font-size: 2rem;
   color: lightgray;
@@ -30,40 +29,4 @@ mat-sidenav {
 
 mat-sidenav-container {
   height: calc(100vh - 65px);
-}
-
-.menu-button {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 1rem;
-
-mat-icon {
-  margin-right: 8px;
-}
-}
-
-.avatar {
-  margin-top: 16px;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-}
-
-.name {
-  margin-top: 8px;
-  font-weight: normal;
-}
-
-.designation {
-  margin-top: 2px;
-  font-size: 0.7rem;
-  color: lightgrey;
-}
-
-mat-divider {
-  margin-top: 16px;
-  margin-bottom: 16px;
-  background-color: rgba(255, 255, 255, 0.5);
 }
