--- a/NekretnineFrontend/src/app/grad/uredi-grad/uredi-grad.component.html
+++ b/NekretnineFrontend/src/app/grad/uredi-grad/uredi-grad.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="dodajGradBoolean == true" class="modal fade show"  tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
+<div *ngIf="urediGrad.izmjenaGrada == true" class="modal fade show"  tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
