--- a/NekretnineFrontend/src/app/drzava/drzava.component.html
+++ b/NekretnineFrontend/src/app/drzava/drzava.component.html
@@ -1,12 +1,14 @@
-<div class="drzave">
+<div style="display: grid;">
+
+<div class="drzave" style="width: 80%">
   <a class="nav-link" style="font-weight: bold" routerLink="/drzava">Drzava</a>
   <a class="nav-link" style="font-weight: bold" routerLink="/grad">Grad</a>
   <a class="nav-link" style="font-weight: bold" routerLink="/lokacija">Lokacija</a>
   <button class="btn btn-primary" (click)="NovaDrzava(UrediPodatak)">Dodaj</button>
   <br><br>
   <input class="form-control" [(ngModel)]="FilterDrzava" placeholder="Ime Drzave">
-
-  <table class="table table-dark" style="margin-left: auto; margin-right: auto; margin-top:10px; font-size: 16px;">
+  <button class="mat-raised-button" (click)="getDrzave()" >Search</button>
+  <table class="table table-dark" style="margin-left: auto; margin-right: auto; margin-top:10px; font-size: 16px;" >
     <thead>
     <tr>
       <th>#</th>
@@ -16,8 +18,8 @@
     </thead>
     <tbody>
     <ng-container>
-      <tr *ngFor="let x of getDrzavaFilter()">
-        <th scope="row">{{x.drzavaID}}</th>
+      <tr *ngFor="let x of this.Podaci">
+        <th scope="row">{{x.drzavaId}}</th>
         <td>{{x.naziv}}</td>
         <td>
           <button (click)="izbrisiDrzavu(x)">Izbrisi</button>
@@ -27,5 +29,19 @@
     </ng-container>
     </tbody>
   </table>
-  <app-uredi-drzava *ngIf="UrediPodatak.drzavaID != 0" [urediDrzavu]="UrediPodatak"></app-uredi-drzava>
+  <app-uredi-drzava *ngIf="UrediPodatak.drzavaId != 0" [urediDrzavu]="UrediPodatak" (messageEvent)="receiveMessage()"></app-uredi-drzava>
 </div>
+  <mat-paginator
+  [length]="pagination.TotalCount"
+  [pageSize]="pagination.PageSize"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  (page)="getDrzave($event)"
+  aria-label="Select page" style="width: 80%; margin-left: 20px">
+
+  </mat-paginator>
+
+</div>
+
+
+
+
